--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -478,5 +478,38 @@
       "title": "Distribuera & lansera",
       "description": "Din applikation distribueras automatiskt och är redo att dela med världen."
     }
+  },
+  "aboutPage": {
+    "title": "Om Kliv",
+    "foundersNote": {
+      "title": "Grundarens anteckning",
+      "paragraph1": "Jag har varit ingenjör under ganska lång tid nu och jag har alltid älskat att skriva kod. Det är min typ av kreativt arbete. Vissa målar, andra skriver musik. Jag kan inte göra någon av de sakerna bra. Men jag kan skriva kod bra. Det finns en riktig glädje i att ta grundläggande logiska byggstenar och forma dem till något användbart och elegant.",
+      "paragraph2": "Den typen av djup, praktisk programmering kommer alltid att ha en plats. Det kommer alltid att finnas människor som vill ha manuell växel, även när de flesta bilar är automatiska eller elbilar som inte ens har växlar att växla. Det finns fortfarande människor som rider hästar. En delmängd av människor kommer alltid att vara passionerade över sitt särskilda intresse även om det kanske inte längre har samma ekonomiska värde som det en gång hade.",
+      "paragraph3": "Verkligheten är: huvuddelen av rutinmässigt programvaruarbete håller på att förändras. Det mesta av det -- allt arbete som miljoner ingenjörer gör varje dag som egentligen inte kräver smak eller kreativitet. Att flytta runt data, bygga CRUD-gränssnitt -- hanteras redan bättre av maskiner. Och det är bra. Det är framsteg.",
+      "paragraph4": "Kliv är mitt försök att bygga för den framtiden.",
+      "paragraph5": "Rollen som praktisk programmerare tonar bort — försvinner inte, utan förändras och det är bra.",
+      "paragraph6": "Låt oss inte fastna i nostalgi för hur saker brukade vara. Låt oss bygga det som kommer härnäst."
+    },
+    "whatIsKliv": {
+      "title": "Vad är Kliv",
+      "paragraph1": "Kliv är en programmerbar canvas där AI kan bygga och leverera verklig programvara — inte mockups, inte demos, utan produktionsklar kod.",
+      "paragraph2": "Vi börjar med fokus på frontend. De nuvarande frontiermodellerna är bra på att bygga med React och Tailwind, så det är vad vi använder just nu."
+    },
+    "whereWereGoing": {
+      "title": "Vart vi är på väg",
+      "paragraph1": "Vi når snabbt en punkt där att konstruera frontend för en app eller webbplats med AI är ett mestadels löst problem. Fokuset ligger nu på att möjliggöra mer avancerad backendfunktionalitet som går hand i hand med frontend:",
+      "listIntro": "Här är vad vi bygger härnäst:",
+      "features": {
+        "backgroundJobs": "Bakgrundsjobb",
+        "queuesWorkers": "Köer och workers",
+        "apiEndpoints": "API-endpoints",
+        "workflows": "Arbetsflöden",
+        "backendLogic": "Backend-affärslogik",
+        "dataPipelines": "Fullständiga datapipelines",
+        "permissions": "Behörighetsmodeller",
+        "infrastructure": "Fullständig infrastruktur-som-kod"
+      },
+      "paragraph2": "Vi banar snabbt vägen så att AI kan sammanställa mer av stacken — på ett sätt som håller."
+    }
   }
 }
