AI-generated changes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -162,6 +162,25 @@
           "title": "Project Remixing",
           "description": "Fork and remix existing projects to create new variations. Perfect for learning and building upon existing ideas."
         }
+      },
+      "technology": {
+        "title": "Technology Stack",
+        "react": {
+          "title": "React & TypeScript",
+          "description": "Built with the latest React and TypeScript for type-safe, maintainable code that scales with your project."
+        },
+        "tailwind": {
+          "title": "Tailwind CSS",
+          "description": "Beautiful, responsive designs using the most popular utility-first CSS framework in the industry."
+        },
+        "shadcn": {
+          "title": "Shadcn/ui Components",
+          "description": "Pre-built, accessible components that follow modern design principles and best practices."
+        },
+        "supabase": {
+          "title": "Supabase Integration",
+          "description": "Seamless backend integration with authentication, database, and real-time features built-in."
+        }
       }
     }
   },
