--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -146,6 +146,25 @@
           "title": "プロジェクトリミックス",
           "description": "既存のプロジェクトをフォークしてリミックスし、新しいバリエーションを作成できます。学習や既存のアイデアの発展に最適です。"
         }
+      },
+      "technology": {
+        "title": "技術スタック",
+        "react": {
+          "title": "React & TypeScript",
+          "description": "最新のReactとTypeScriptで構築され、プロジェクトと共にスケールする型安全で保守可能なコード。"
+        },
+        "tailwind": {
+          "title": "Tailwind CSS",
+          "description": "業界で最も人気のあるユーティリティファーストCSSフレームワークを使用した美しいレスポンシブデザイン。"
+        },
+        "shadcn": {
+          "title": "Shadcn/uiコンポーネント",
+          "description": "モダンなデザイン原則とベストプラクティスに従った、事前構築されたアクセシブルなコンポーネント。"
+        },
+        "supabase": {
+          "title": "Supabase統合",
+          "description": "認証、データベース、リアルタイム機能が組み込まれたシームレスなバックエンド統合。"
+        }
       }
     }
   },
