--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -146,6 +146,25 @@
           "title": "Projektremixning",
           "description": "Forka och remixa befintliga projekt för att skapa nya variationer. Perfekt för lärande och att bygga vidare på befintliga idéer."
         }
+      },
+      "technology": {
+        "title": "Teknisk stack",
+        "react": {
+          "title": "React & TypeScript",
+          "description": "Byggd med den senaste React och TypeScript för typsäker, underhållbar kod som skalar med ditt projekt."
+        },
+        "tailwind": {
+          "title": "Tailwind CSS",
+          "description": "Vackra, responsiva designer med det mest populära utility-first CSS-ramverket i branschen."
+        },
+        "shadcn": {
+          "title": "Shadcn/ui-komponenter",
+          "description": "Förbyggda, tillgängliga komponenter som följer moderna designprinciper och bästa praxis."
+        },
+        "supabase": {
+          "title": "Supabase-integration",
+          "description": "Sömlös backend-integration med autentisering, databas och realtidsfunktioner inbyggda."
+        }
       }
     }
   },
