AI-generated changes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -545,6 +545,15 @@
         "infrastructure": "Full infrastructure-as-code"
       },
       "paragraph2": "We're quickly paving the road so the AI can assemble more of the stack — in a way that holds up."
+    },
+    "investors": {
+      "title": "Investors",
+      "paragraph1": "Kliv is backed by leading investors who share our vision of democratizing software development through AI.",
+      "paragraph2": "Our current investor is",
+      "paragraph2Suffix": ", a venture capital firm focused on backing innovative technology companies.",
+      "rationalVentures": "Rational Ventures",
+      "paragraph3": "For inquiries about investing in Kliv, please contact us at",
+      "paragraph3Suffix": "."
     }
   }
 }
