--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -529,6 +529,15 @@
         "infrastructure": "完全なインフラストラクチャ・アズ・コード"
       },
       "paragraph2": "AIがスタックのより多くの部分を組み立てることができるよう、耐久性のある方法で道を急速に舗装しています。"
+    },
+    "investors": {
+      "title": "投資家",
+      "paragraph1": "Klivは、AIを通じてソフトウェア開発の民主化という私たちのビジョンを共有する主要な投資家から支援を受けています。",
+      "paragraph2": "現在の投資家は",
+      "paragraph2Suffix": "です。革新的なテクノロジー企業への投資に焦点を当てたベンチャーキャピタルファームです。",
+      "rationalVentures": "Rational Ventures",
+      "paragraph3": "Klivへの投資に関するお問い合わせは、",
+      "paragraph3Suffix": "までご連絡ください。"
     }
   }
 }
