--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -529,6 +529,15 @@
         "infrastructure": "Fullständig infrastruktur-som-kod"
       },
       "paragraph2": "Vi banar snabbt vägen så att AI kan sammanställa mer av stacken — på ett sätt som håller."
+    },
+    "investors": {
+      "title": "Investerare",
+      "paragraph1": "Kliv stöds av ledande investerare som delar vår vision om att demokratisera mjukvaruutveckling genom AI.",
+      "paragraph2": "Vår nuvarande investerare är",
+      "paragraph2Suffix": ", ett riskkapitalbolag som fokuserar på att stödja innovativa teknikföretag.",
+      "rationalVentures": "Rational Ventures",
+      "paragraph3": "För förfrågningar om att investera i Kliv, vänligen kontakta oss på",
+      "paragraph3Suffix": "."
     }
   }
 }
