AI-generated changes

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -73,18 +73,34 @@
   },
   "features": {
     "title": "強力な機能",
-    "subtitle": "KlivはAI駆動の完全な開発環境を提供し、誰でもアプリ作成にアクセスできるようにします。",
-    "aiPowered": {
-      "title": "AI駆動開発",
-      "description": "私たちの高度なAIはあなたの要件を理解し、クリーンで本番対応のコードを自動的に生成します。"
+    "subtitle": "デプロイメントパイプラインやビルド設定に悩む必要はありません。Klivが技術的な複雑さを処理し、あなたは創造に集中できます。",
+    "hosting": {
+      "title": "ホスティング込み",
+      "description": "サーバー管理なし、デプロイメントの頭痛なし。アプリは高速グローバルCDNで瞬時にライブになります。"
     },
-    "realtime": {
-      "title": "リアルタイムプレビュー",
-      "description": "AIとチャットしながら、アプリやウェブサイトが瞬時に生き生きとするのを見てください。待機時間なし、コンパイルなし。"
+    "domain": {
+      "title": "独自ドメイン",
+      "description": "ワンクリックでカスタムドメインを接続。ブランドを反映するプロフェッショナルなURL。"
     },
-    "responsive": {
-      "title": "モバイルファーストデザイン",
-      "description": "すべてのプロジェクトはレスポンシブデザインの原則で構築され、すべてのデバイスで美しく表示されます。"
+    "github": {
+      "title": "GitHub同期",
+      "description": "ソースコードを安全に保管。GitHub同期を有効にして完全な所有権とバージョン履歴を維持。"
+    },
+    "ai": {
+      "title": "AIがあなたのために構築",
+      "description": "ビジョンを説明すれば実現します。私たちのAIはあなたの要件を理解し、本番対応のコードを作成します。"
+    },
+    "editing": {
+      "title": "コード&プレビュー",
+      "description": "必要に応じてソースコードを直接編集。ライブプレビューで結果を瞬時に確認 - リフレッシュ不要。"
+    },
+    "snapshots": {
+      "title": "タイムトラベル",
+      "description": "すべての変更がスナップショット化されます。間違いを犯した？ワンクリックで以前のバージョンに戻れます。"
+    },
+    "mobile": {
+      "title": "モバイルファースト",
+      "description": "基盤からレスポンシブに構築。アプリはあらゆるデバイスで毎回完璧に表示されます。"
     },
     "page": {
       "badge": "機能",
