--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -73,18 +73,34 @@
   },
   "features": {
     "title": "Kraftfulla funktioner",
-    "subtitle": "Kliv tillhandahåller en komplett utvecklingsmiljö driven av AI, vilket gör appskapande tillgängligt för alla.",
-    "aiPowered": {
-      "title": "AI-driven utveckling",
-      "description": "Vår avancerade AI förstår dina krav och genererar ren, produktionsklar kod automatiskt."
+    "subtitle": "Sluta brottas med distributionspipelines och byggkonfigurationer. Kliv hanterar den tekniska komplexiteten så att du kan fokusera på att skapa.",
+    "hosting": {
+      "title": "Hosting inkluderad",
+      "description": "Inga servrar att hantera, inga distributionsproblem. Din app går live direkt med blixtsnabb global CDN."
     },
-    "realtime": {
-      "title": "Realtidsförhandsvisning",
-      "description": "Se din app eller webbplats komma till liv direkt när du chattar med AI:n. Ingen väntan, ingen kompilering."
+    "domain": {
+      "title": "Din egen domän",
+      "description": "Anslut din anpassade domän med ett klick. Professionella URL:er som återspeglar ditt varumärke."
     },
-    "responsive": {
-      "title": "Mobilfokuserad design",
-      "description": "Varje projekt byggs med responsiva designprinciper och ser bra ut på alla enheter."
+    "github": {
+      "title": "GitHub-synkronisering",
+      "description": "Håll din källkod säker. Aktivera GitHub-synkronisering för att behålla fullständig äganderätt och versionshistorik."
+    },
+    "ai": {
+      "title": "AI bygger åt dig",
+      "description": "Beskriv din vision och se den komma till liv. Vår AI förstår dina krav och skapar produktionsklar kod."
+    },
+    "editing": {
+      "title": "Kod & förhandsgranskning",
+      "description": "Redigera din källkod direkt om du vill. Se resultat direkt med live förhandsgranskning - ingen uppdatering behövs."
+    },
+    "snapshots": {
+      "title": "Tidsresor",
+      "description": "Varje ändring sparas som ögonblicksbild. Gjorde ett misstag? Gå tillbaka till vilken tidigare version som helst med ett klick."
+    },
+    "mobile": {
+      "title": "Mobil först",
+      "description": "Byggd responsivt från grunden. Dina appar ser perfekta ut på alla enheter, varje gång."
     },
     "page": {
       "badge": "Funktioner",
