AI-generated changes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -518,12 +518,14 @@
     "title": "About Kliv",
     "foundersNote": {
       "title": "Founder's note",
-      "paragraph1": "I've been an engineer for a fairly long time now and I've always loved writing code. It's my type of creative work. Some people paint, some write music. I can't do either of those things well. But I can write code well. There's a real joy in taking basic logical building blocks and shape them into something useful and elegant.",
+      "founderAlt": "Anders Olsson, Founder of Kliv",
+      "paragraph1": "I've always loved writing code. It's my type of creative work. Some people paint, some write music. I can't do either of those things well. But I can write code well. There's a real joy in taking basic logical building blocks and shape them into something useful and elegant.",
       "paragraph2": "That kind of deep, hands-on programming will always have a place. There will always be people who want a stick shift, even when most cars are automatic or EVs that don't even have gears to shift. There are still people who ride horses. Some subset of people will always be passionate about their particular interest even if it might no longer have the same economic value it once did.",
       "paragraph3": "The reality is: the bulk of routine software work is moving on. Most of it -- all the work that millions of engineers do every day that don't really require taste or creativity. Shifting data around, building CRUD interfaces -- is already better handled by machines. And that's fine. That's progress.",
       "paragraph4": "Kliv is my attempt to build for that future.",
       "paragraph5": "The role of the hands-on programmer is fading — not disappearing, but shifting and that's fine.",
-      "paragraph6": "Let's not get stuck in nostalgia for how things used to be. Let's build what's next."
+      "paragraph6": "Let's not get stuck in nostalgia for how things used to be. Let's build what's next.",
+      "signature": "—Anders Olsson, Founder, Kliv"
     },
     "whatIsKliv": {
       "title": "What is Kliv",
