--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -518,12 +518,14 @@
     "title": "Klivについて",
     "foundersNote": {
       "title": "創設者からのメッセージ",
-      "paragraph1": "私は長い間エンジニアをしており、コードを書くことをずっと愛してきました。これは私にとってのクリエイティブワークです。ある人は絵を描き、ある人は音楽を作ります。私はどちらもうまくできませんが、コードならうまく書けます。基本的な論理的構成要素を取り、それらを有用でエレガントなものに形作ることには真の喜びがあります。",
+      "founderAlt": "Anders Olsson、Kliv創設者",
+      "paragraph1": "コードを書くことをずっと愛してきました。これは私にとってのクリエイティブワークです。ある人は絵を描き、ある人は音楽を作ります。私はどちらもうまくできませんが、コードならうまく書けます。基本的な論理的構成要素を取り、それらを有用でエレガントなものに形作ることには真の喜びがあります。",
       "paragraph2": "そのような深い実践的なプログラミングは常に存在意義があります。ほとんどの車が自動やギアシフトさえないEVになっても、マニュアル車を欲しがる人は常にいるでしょう。馬に乗る人もまだいます。経済的価値が以前ほどなくなっても、特定の興味に情熱を注ぐ人々は常にいるのです。",
       "paragraph3": "現実は、日常的なソフトウェア作業の大部分は時代とともに変化しているということです。毎日何百万人のエンジニアが行っている作業のほとんど、本当にセンスや創造性を必要としない作業。データの移動やCRUDインターフェースの構築は、すでに機械によって適切に処理されています。それは良いことです。それが進歩というものです。",
       "paragraph4": "Klivは、その未来のために構築する私の試みです。",
       "paragraph5": "実践的なプログラマーの役割は薄れつつあります — 消えるのではなく、変化しているのです。それは良いことです。",
-      "paragraph6": "かつての在り方への郷愁にとらわれないようにしましょう。次に来るものを構築しましょう。"
+      "paragraph6": "かつての在り方への郷愁にとらわれないようにしましょう。次に来るものを構築しましょう。",
+      "signature": "—Anders Olsson、創設者、Kliv"
     },
     "whatIsKliv": {
       "title": "Klivとは",
