AI-generated changes

--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -519,7 +519,7 @@
     "foundersNote": {
       "title": "Grundarens anteckning",
       "founderAlt": "Anders Olsson, grundare av Kliv",
-      "paragraph1": "Jag har varit ingenjör under ganska lång tid nu och jag har alltid älskat att skriva kod. Det är min typ av kreativt arbete. Vissa målar, andra skriver musik. Jag kan inte göra någon av de sakerna bra. Men jag kan skriva kod bra. Det finns en riktig glädje i att ta grundläggande logiska byggstenar och forma dem till något användbart och elegant.",
+      "paragraph1": "Jag har alltid älskat att skriva kod. Det är min typ av kreativt arbete. Vissa målar, andra skriver musik. Jag kan inte göra någon av de sakerna bra. Men jag kan skriva kod bra. Det finns en riktig glädje i att ta grundläggande logiska byggstenar och forma dem till något användbart och elegant.",
       "paragraph2": "Den typen av djup, praktisk programmering kommer alltid att ha en plats. Det kommer alltid att finnas människor som vill ha manuell växel, även när de flesta bilar är automatiska eller elbilar som inte ens har växlar att växla. Det finns fortfarande människor som rider hästar. En delmängd av människor kommer alltid att vara passionerade över sitt särskilda intresse även om det kanske inte längre har samma ekonomiska värde som det en gång hade.",
       "paragraph3": "Verkligheten är: huvuddelen av rutinmässigt programvaruarbete håller på att förändras. Det mesta av det -- allt arbete som miljoner ingenjörer gör varje dag som egentligen inte kräver smak eller kreativitet. Att flytta runt data, bygga CRUD-gränssnitt -- hanteras redan bättre av maskiner. Och det är bra. Det är framsteg.",
       "paragraph4": "Kliv är mitt försök att bygga för den framtiden.",
