AI-generated changes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -529,8 +529,11 @@
     },
     "whatIsKliv": {
       "title": "What is Kliv",
-      "paragraph1": "Kliv is a programmable canvas where AI can build and ship real software — not mockups, not demos, but production-ready code.",
-      "paragraph2": "We're starting with a focus on the frontend. The current frontier models are great at building with React and Tailwind, so that's what we're using right now."
+      "paragraph1": "Kliv is an agentic AI platform that builds web applications through interactive conversation. Unlike the first generation of AI builders that generate everything in a single reply, Kliv works like a real developer - thinking through requirements, inspecting files, making iterative changes, and refining code step-by-step.",
+      "paragraph2": "Watch as the AI reasons through your project, asks clarifying questions, and methodically builds your application. Perfect for rapid prototyping, entrepreneurs, and businesses who want professional applications without the technical complexity.",
+      "paragraph3": "Start with a library of pre-built apps and websites or build from scratch - either way, you'll have a custom application in minutes. Your app gets free hosting on kliv.site from day one, with instant deployment and no configuration needed.",
+      "paragraph4": "The built-in workspace lets you edit code directly, preview changes before publishing, and maintain complete revision history so you can roll back to any previous version. Connect to GitHub for source control when your team grows, or export your entire codebase anytime.",
+      "paragraph5": "Every tool you need for professional app development is integrated into a single platform, from initial prototype through production deployment and ongoing updates. Currently powered by Supabase for reliable backend infrastructure, Kliv is evolving to include a fully integrated backend that will give every app database, authentication, and API capabilities out of the box."
     },
     "whereWereGoing": {
       "title": "Where we're going",
