AI-generated changes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -309,7 +309,7 @@
     "subtitle": "Learn about our comprehensive security measures and data protection practices."
   },
   "footer": {
-    "description": "An agentic AI platform that builds web applications through interactive conversation.",
+    "description": "Build apps and websites by chatting with AI. No coding required.",
     "product": "Product",
     "features": "Features",
     "pricing": "Pricing",
