AI-generated changes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -102,6 +102,14 @@
       "title": "Mobile First",
       "description": "Built responsive from the ground up. Your apps look perfect on every device, every time."
     },
+    "teamInvite": {
+      "title": "Team Collaboration", 
+      "description": "Invite multiple team members to collaborate on your projects. Work together seamlessly with shared access and real-time updates."
+    },
+    "roleAccess": {
+      "title": "Role-Based Permissions",
+      "description": "Control who can view, edit, or publish your projects with granular role-based access controls for secure team collaboration."
+    },
     "page": {
       "badge": "Features",
       "title": "Powerful Features for Modern Development",
