--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -102,6 +102,14 @@
       "title": "モバイルファースト",
       "description": "基盤からレスポンシブに構築。アプリはあらゆるデバイスで毎回完璧に表示されます。"
     },
+    "teamInvite": {
+      "title": "チーム コラボレーション",
+      "description": "複数のチームメンバーをプロジェクトに招待して共同作業。共有アクセスとリアルタイム更新でシームレスに協働できます。"
+    },
+    "roleAccess": {
+      "title": "役割ベースの権限",
+      "description": "安全なチーム協働のため、きめ細かい役割ベースのアクセス制御でプロジェクトの表示、編集、公開権限をコントロール。"
+    },
     "page": {
       "badge": "機能",
       "title": "現代的な開発のための強力な機能",
