--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -102,6 +102,14 @@
       "title": "Mobil först",
       "description": "Byggd responsivt från grunden. Dina appar ser perfekta ut på alla enheter, varje gång."
     },
+    "teamInvite": {
+      "title": "Teamsamarbete",
+      "description": "Bjud in flera teammedlemmar att samarbeta på dina projekt. Arbeta tillsammans sömlöst med delad åtkomst och realtidsuppdateringar."
+    },
+    "roleAccess": {
+      "title": "Rollbaserade behörigheter", 
+      "description": "Kontrollera vem som kan visa, redigera eller publicera dina projekt med granulära rollbaserade åtkomstkontroller för säkert teamsamarbete."
+    },
     "page": {
       "badge": "Funktioner",
       "title": "Kraftfulla funktioner för modern utveckling",
