Add welcome back message and portal button in multiple languages

--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -7,7 +7,10 @@
     "signIn": "Logga in",
     "getStarted": "Kom igång",
     "inspiration": "Inspiration",
-    "howItWorks": "Så fungerar det"
+    "howItWorks": "Så fungerar det",
+    "welcomeBack": "Välkommen tillbaka, {{firstName}}!",
+    "portal": "Portal",
+    "portalButton": "Gå till portal"
   },
   "hero": {
     "title": "Skriv i rutan för att skapa vilken webbplats eller app som helst",
@@ -501,26 +504,6 @@
     "threeSites": "Gjorde 3 sidor den här månaden. den inkluderade hostingen är den bästa delen",
     "diegoAuthor": "Diego",
     "diegoTitle": "Byrå-ägare"
-  },
-  "howItWorks": {
-    "title": "Så fungerar Kliv",
-    "subtitle": "Från idé till liveapplikation i fyra enkla steg",
-    "step1": {
-      "title": "Beskriv din idé",
-      "description": "Berätta helt enkelt för Kliv vad du vill bygga på naturligt språk. Ingen teknisk jargong behövs."
-    },
-    "step2": {
-      "title": "AI-magi händer",
-      "description": "Vår avancerade AI förstår dina krav och börjar skapa din applikation direkt."
-    },
-    "step3": {
-      "title": "Kodgenerering",
-      "description": "Kliv skriver ren, produktionsklar kod med moderna ramverk och bästa praxis."
-    },
-    "step4": {
-      "title": "Distribuera & lansera",
-      "description": "Din applikation distribueras automatiskt och är redo att dela med världen."
-    }
   },
   "aboutPage": {
     "title": "Om Kliv",
