--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -7,7 +7,10 @@
     "signIn": "Sign In",
     "getStarted": "Get Started",
     "inspiration": "Inspiration",
-    "howItWorks": "How it works"
+    "howItWorks": "How it works",
+    "welcomeBack": "Welcome back, {{firstName}}!",
+    "portal": "Portal",
+    "portalButton": "Go to Portal"
   },
   "hero": {
     "title": "Type in the box to make any website or app",
@@ -501,26 +504,6 @@
     "threeSites": "Hice 3 sitios este mes. el hosting incluido es la mejor parte",
     "diegoAuthor": "Diego",
     "diegoTitle": "Agency Owner"
-  },
-  "howItWorks": {
-    "title": "How Kliv Works",
-    "subtitle": "From idea to live application in four simple steps",
-    "step1": {
-      "title": "Describe Your Idea",
-      "description": "Simply tell Kliv what you want to build in natural language. No technical jargon needed."
-    },
-    "step2": {
-      "title": "AI Magic Happens",
-      "description": "Our advanced AI understands your requirements and starts creating your application instantly."
-    },
-    "step3": {
-      "title": "Code Generation",
-      "description": "Kliv writes clean, production-ready code with modern frameworks and best practices."
-    },
-    "step4": {
-      "title": "Deploy & Launch",
-      "description": "Your application is automatically deployed and ready to share with the world."
-    }
   },
   "aboutPage": {
     "title": "About Kliv",
