--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -174,6 +174,40 @@
           "description": "既存のプロジェクトをフォークしてリミックスし、新しいバリエーションを作成できます。学習や既存のアイデアの発展に最適です。"
         }
       },
+      "klivCloud": {
+        "title": "Kliv Cloud バックエンド",
+        "subtitle": "AIが管理する完全なバックエンドインフラストラクチャ。サーバー設定、データベースセットアップ、APIデプロイは不要です。",
+        "intro": "Kliv Cloudは、アプリケーションの完全なバックエンドを提供し、AIアシスタントによって自動的に構築・管理されます。アプリに必要なものを説明すると、AIがセキュアなデータベースをセットアップし、サーバーサイド機能を作成し、API認証情報を管理し、アクセス制御を設定します—1行のコードも書く必要はありません。",
+        "enterprise": "バックエンドは、グローバルに複製されたデータベース、行レベルセキュリティ、自動監査証跡、暗号化されたシークレットストレージを備えたエンタープライズグレードのインフラストラクチャで実行されます。すべては、データの表示、機能の監視、プロジェクトの管理がコードなしで行える視覚的管理インターフェースからアクセスできます。",
+        "database": {
+          "title": "データベース",
+          "description": "自動セキュリティ、バックアップ、監査証跡付きでアプリケーションデータを保存します。AIがテーブルを作成し、関係を構成し、すべての技術的詳細を管理します。"
+        },
+        "content": {
+          "title": "コンテンツストレージ",
+          "description": "画像、ドキュメント、動画などのファイルを自動最適化とアクセス制御付きでアップロード・管理します。ユーザーアバター、ファイル共有、画像ギャラリーに最適です。"
+        },
+        "secrets": {
+          "title": "シークレット管理",
+          "description": "API認証情報と機密設定を安全に保存します。シークレットは暗号化され、UIでマスクされ、機能に自動的に利用可能になります。"
+        },
+        "functions": {
+          "title": "エッジ機能",
+          "description": "複雑なロジック、外部API統合、セキュアな操作のためのサーバーサイドJavaScript。AIがあなたの説明に基づいてコードを記述します。"
+        },
+        "admin": {
+          "title": "管理インターフェース",
+          "description": "データの閲覧、機能の監視、ログの確認、バックエンドの管理のための視覚的ツール。コードは不要です。"
+        },
+        "email": {
+          "title": "メール配信",
+          "description": "テンプレート管理とカスタムSMTPサポート付きで、トランザクションメール、通知、マーケティングメッセージを送信します。"
+        },
+        "emailTemplates": {
+          "title": "メールテンプレート",
+          "description": "Markdownフォーマットと動的変数を使用した、パーソナライズされたメッセージングのための再利用可能なメールテンプレートを作成します。"
+        }
+      },
       "technology": {
         "title": "技術スタック",
         "react": {
@@ -187,10 +221,6 @@
         "shadcn": {
           "title": "Shadcn/uiコンポーネント",
           "description": "モダンなデザイン原則とベストプラクティスに従った、事前構築されたアクセシブルなコンポーネント。"
-        },
-        "supabase": {
-          "title": "Supabase統合",
-          "description": "認証、データベース、リアルタイム機能が組み込まれたシームレスなバックエンド統合。"
         }
       }
     }
