Update feature descriptions and remove Supabase references from UI

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -554,7 +554,7 @@
       "paragraph2": "Watch as the AI reasons through your project, asks clarifying questions, and methodically builds your application. Perfect for rapid prototyping, entrepreneurs, and businesses who want professional applications without the technical complexity.",
       "paragraph3": "Start with a library of pre-built apps and websites or build from scratch - either way, you'll have a custom application in minutes. Your app gets free hosting on kliv.site from day one, with instant deployment and no configuration needed.",
       "paragraph4": "The built-in workspace lets you edit code directly, preview changes before publishing, and maintain complete revision history so you can roll back to any previous version. Connect to GitHub for source control when your team grows, or export your entire codebase anytime.",
-      "paragraph5": "Every tool you need for professional app development is integrated into a single platform, from initial prototype through production deployment and ongoing updates. Currently powered by Supabase for reliable backend infrastructure, Kliv is evolving to include a fully integrated backend that will give every app database, authentication, and API capabilities out of the box."
+      "paragraph5": "Every tool you need for professional app development is integrated into a single platform, from initial prototype through production deployment and ongoing updates. Kliv includes a fully integrated backend that gives every app database, authentication, and API capabilities out of the box."
     },
     "whereWereGoing": {
       "title": "Where we're going",
